--- a/mateadmin.html
+++ b/mateadmin.html
@@ -89,6 +89,9 @@
                 <!-- Portfolio Item 5-->
                 <div class="col-md-3 col-lg-6 mb-5">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Lqf5WmulMYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <a href="editar.php?id=<?php echo $row['id']?>" class="btn btn-secondary">  <i class="fas fa-marker"></i> </a>
+                    <a href="eliminar.php?id=<?php echo $row['id']?>" class="btn btn-danger"> <i class="far fa-trash-alt"></i> </a>
                 </div>
             </div>
         </div>
